--- a/web/css/app.css
+++ b/web/css/app.css
@@ -139,8 +139,7 @@ ul li {
 }
 
 .media-options {
-    margin-left: 10px;
-    margin-top: 15px;
+    margin: 15px 15px 0 40px;
     text-align: center;
 }
 
@@ -167,6 +166,7 @@ ul li {
 .media-image {
     background-color: white;
     margin-right: 10px;
+    margin-left: 15px;
 }
 
 #ximage {
