Added app images

--- a/app/Resources/views/includes/carousel.html.twig
+++ b/app/Resources/views/includes/carousel.html.twig
@@ -2,13 +2,10 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="{{ asset('/images/kveo-fringe.jpg'| imagine_filter('bannerw') ) }}">
+            <img src="{{ asset('/images/fixtures/kveo-fringe.jpg'| imagine_filter('bannerw') ) }}">
         </div>
         <div class="item">
-            <img src="{{ asset('/images/kveo-fringe.jpg'| imagine_filter('bannerw') ) }}">
-        </div>
-        <div class="item">
-            <img src="{{ asset('/images/twdbannerr2.jpg'| imagine_filter('bannerw') ) }}">
+            <img src="{{ asset('/images/fixtures/twdbannerr2.jpg'| imagine_filter('bannerw') ) }}">
         </div>
     </div>
 </div>
