Fix error in instant search

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,7 +33,7 @@
     <script>
         $(function() {
             $('.search-bar input[name="q"]').instantSearch({
-                noItemsFoundMessage: '{{ 'post.no_posts_found'|trans }}'
+                noItemsFoundMessage: '{{ 'media.no_medias_found'|trans }}'
             });
         });
     </script>
