--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -7,7 +7,7 @@
             <div class="search-bar col-md-3 col-xs-7">
                 <form action="{{ path('media_search') }}" method="get">
                     <div class="input-group-sm">
-                        <input name="q" type="text" class="form-control" placeholder="{{ 'media.search_for'|trans }}" autocomplete="off">
+                        <input id="instant" name="q" type="text" class="form-control" placeholder="{{ 'media.search_for'|trans }}" autocomplete="off">
                     </div>
                 </form>
             </div>
