--- a/app/Resources/views/home/catalog.html.twig
+++ b/app/Resources/views/home/catalog.html.twig
@@ -20,7 +20,7 @@
                 </div>
             </div>
         {% endfor %}
-        <div class="paginator col-md-12">
+        <div class="paginator">
             {{ knp_pagination_render(medias) }}
         </div>
     </div>
