--- a/app/Resources/views/media/media.html.twig
+++ b/app/Resources/views/media/media.html.twig
@@ -18,14 +18,14 @@
                 <div class="media-state">
                     {% if state is null %}
                         <a href="{{ path('new_state', { 'media': selected.id }) }}">
-                            <button type="button" class="btn btn-danger btn-lg">
+                            <button type="button" class="btn btn-danger btn-xs">
                                 <li class="fa fa-pencil"></li>
                                 {{ 'btn.add_state' |trans }}
                             </button>
                         </a>
                     {% else %}
                         <a href="{{ path('edit_state', { 'media': selected.id, 'state': state.id }) }}">
-                            <button type="button" class="btn btn-danger btn-lg">
+                            <button type="button" class="btn btn-danger btn-xs">
                                 {% if state.mediaState == 'Pendiente' %}
                                     <li class="fa fa-clock-o"></li>
                                 {% elseif state.mediaState == 'Siguiendo' %}
