--- a/web/css/app.css
+++ b/web/css/app.css
@@ -25,7 +25,7 @@ ul li {
 .wrap{
     flex: 1;
     padding-bottom: 10px;
-    background-image: url("/images/fixtures/background-image.jpg");
+    background-color: rgba(31, 31, 31, 0.94);
     padding-top: 120px;
 }
 
