--- a/web/css/app.css
+++ b/web/css/app.css
@@ -88,7 +88,7 @@ ul li {
 
 /* footer*/
 #footer {
-    background: #414141;
+    background: #bf0000;
     color: #e3dee2;
     height: auto;
     width: 100%;
